<resources>
    <string name="app_name">CS50 Final Project</string>
    <string name="button">Get Started</string>
    <string name="b_fit">B-Fit</string>
    <string name="quote">Change your body, Change your mind!</string>
    <string name="workouts">Workouts</string>
    <string name="nutrition">Nutrition</string>
    <string name="about_me">About Me</string>
    <string name="start">Select your workout difficulty</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="exercise">Exercise</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="day1">Day 1: Upper Body</string>
    <string name="day2">Day 2: Lower Body</string>
    <string name="day3">Day 3: Rest</string>
    <string name="day4">Day 4: Upper Body</string>
    <string name="day5">Day 5: Lower Body</string>
    <string name="day6">Day 1: Chest and Biceps</string>
    <string name="day7">Day 2: Glutes and Hamstrings</string>
    <string name="day8">Day 3: Back and Triceps</string>
    <string name="day9">Day 4: Shoulders and Abs</string>
    <string name="day10">Day 5: Quads and Calves</string>
    <string name="day11">Day 1: Push Day</string>
    <string name="day12">Day 2: Pull Day</string>
    <string name="day13">Day 3: Leg Day</string>
    <string name="day14">Day 4: Push Day</string>
    <string name="day15">Day 5: Pull Day</string>
    <string name="day16">Day 6: Leg Day</string>


    <string name="rest_day">It is important to allow your body to fully recover!</string>
    <string name="exer1">Incline Bench Press</string>
    <string name="exer2">Bent Over Rows</string>
    <string name="exer3">Military Press</string>
    <string name="exer4">Lat Pull Down</string>
    <string name="exer5">Tricep Extension</string>
    <string name="exer6">Seated Bicep Curl</string>
    <string name="exer7">Forward Lunges</string>
    <string name="exer8">Deadlifts</string>
    <string name="exer9">Hip Thrusts</string>
    <string name="exer10">Hack Squats</string>
    <string name="exer11">Seated Calf Raises</string>
    <string name="exer12">Hamstring Curls</string>
    <string name="exer13">Bench Press</string>
    <string name="exer14">Lat Pull Downs</string>
    <string name="exer15">Dumbbell Shoulder Press</string>
    <string name="exer16">Chin Ups</string>
    <string name="exer17">Alternating Bicep Curls</string>
    <string name="exer18">Tricep Dips</string>
    <string name="exer19">Squats</string>
    <string name="exer20">Leg Press</string>
    <string name="exer21">Hip Adductors</string>
    <string name="exer22">Hip Abductors</string>
    <string name="exer23">Calf Raises</string>
    <string name="exer24">Leg Extensions</string>
    <string name="exer25">Push Ups</string>
    <string name="exer26">Chin Ups</string>
    <string name="exer27">Bench Press</string>
    <string name="exer28">Incline Dumbbell Press</string>
    <string name="exer29">High to Low Cable Flies</string>
    <string name="exer30">Cable Chest Flies</string>
    <string name="exer31">Incline Dumbbell Bicep Curls</string>
    <string name="exer32">Hammer Curls</string>
    <string name="exer33">Squats</string>
    <string name="exer34">Deadlifts</string>
    <string name="exer35">Hip Thrusts</string>
    <string name="exer36">Seated Calf Raises</string>
    <string name="exer37">Hamstring Curls</string>
    <string name="exer38">Hip Adductors</string>
    <string name="exer39">Hip Abductors</string>
    <string name="exer40">Pull Ups</string>
    <string name="exer41">Tricep Dips</string>
    <string name="exer42">Bent Over Barbell Rows</string>
    <string name="exer43">Close Grip Bench Press</string>
    <string name="exer44">Reverse Lat Pull Downs</string>
    <string name="exer45">Arnold Cable Rows</string>
    <string name="exer46">Tricep cable Extensions</string>
    <string name="exer47">Face Pulls</string>
    <string name="exer48">Military Press</string>
    <string name="exer49">Seated Shoulder Press</string>
    <string name="exer50">Lateral Raises</string>
    <string name="exer51">Rear Delt Flies</string>
    <string name="exer52">Roman Chair</string>
    <string name="exer53">Russian Ball Twist</string>
    <string name="exer54">Cable Crunches</string>
    <string name="exer55">Plank</string>
    <string name="exer56">Lunges</string>
    <string name="exer57">Hack Squats</string>
    <string name="exer58">Bulgarian Split Squats</string>
    <string name="exer59">Seated Calf Raises</string>
    <string name="exer60">Leg Press</string>
    <string name="exer61">Standing Calf Raises</string>
    <string name="exer62">Leg Extensions</string>

    <string name="exer63">Incline Bench Press</string>
    <string name="exer64">Dumbbell Shoulder Press</string>
    <string name="exer65">Chest Flies</string>
    <string name="exer66">Upper to Lower Chest Flies</string>
    <string name="exer67">Rope Tricep Extension</string>
    <string name="exer68">Bar Tricep Extension</string>
    <string name="exer69">Lateral Raises</string>
    <string name="exer70">Tricep Dips</string>

    <string name="exer71">Lat Pull Down</string>
    <string name="exer72">Bent Over Rows</string>
    <string name="exer73">Incline Dumbbell Curls</string>
    <string name="exer74">Cable Lat Pull Downs</string>
    <string name="exer75">Cable Arnold Rows</string>
    <string name="exer76">Pull Ups</string>
    <string name="exer77">EZ Bar Bicep Curls</string>

    <string name="exer78">Lunges</string>
    <string name="exer79">Deadlift</string>
    <string name="exer80">Hip Thrusts</string>
    <string name="exer81">Seated Calf Raises</string>
    <string name="exer82">Hamstring Curls</string>
    <string name="exer83">Hack Squats</string>

    <string name="exer84">Bench Press</string>
    <string name="exer85">Close Grip Bench Press</string>
    <string name="exer86">Military Press</string>
    <string name="exer87">Machine Chest Flies</string>
    <string name="exer88">Overhead Tricep Extensions</string>
    <string name="exer89">Cable Tricep Extensions</string>
    <string name="exer90">Lateral Raises</string>
    <string name="exer91">Push Ups</string>

    <string name="exer92">Pull Ups</string>
    <string name="exer93">Hammer Curls</string>
    <string name="exer94">Reverse Grip Rows</string>
    <string name="exer95">Cable Bicep Curls</string>
    <string name="exer96">Face Pulls</string>
    <string name="exer97">Seated Cable Rows</string>
    <string name="exer98">Dumbbell Bicep Curls</string>

    <string name="exer99">Squats</string>
    <string name="exer100">Leg Press</string>
    <string name="exer101">Seated Calf Raises</string>
    <string name="exer102">Hip Adductors</string>
    <string name="exer103">Hip Abductors</string>
    <string name="exer104">Standing Calf Raises</string>
    <string name="exer105">Leg Extensions</string>

    <string name="setsN">3</string>
    <string name="repsN">8-10</string>

    <string name="healthy">A healthy body leads to a healthy mind!</string>
    <string name="keyPoints">The 3 keys to optimal nutrition are balance, quality, and timing.</string>
    <string name="keyPoints1">To maintain balance, eat from all or most of the food groups. Eat the right amount for your activity and performance goals.</string>
    <string name="hyperlink">https://www.myprotein.com/thezone/recipe/meal-prep-recipes-muscle-building-fat-loss/</string>
    <string name="calculator">How many maintenance calories should you eat per day?</string>
    <string name="calorieDef">A calorie deficit of 500 calories per day is effective for healthy and sustainable weight loss.</string>
    <string name="calorieSur">A calorie surplus of 350–500 calories per day is usually effective to promote muscle gains while minimizing fat storage.</string>
    <string name="journey">Welcome to my fitness journey!</string>
    <string name="myInfo">My name is Bradley Jansen and I am currently a student of the CS50x course. I am 25 years old and reside in the city of Johannesburg, South Africa!</string>
    <string name="passion">Fitness has always played a big role in my life and has grown into one of my biggest passions. I started playing sports and training in the gym at a fairly young age. The gym should be seen as a safe space for anybody who wants to improve themselves and I encourage you to start your journey today!</string>
    <string name="journey2">For more tips and tricks in the gym follow my fitness journey on TikTok!</string>
</resources>